crates/kula-lsp/src/features/snapshots/kula_lsp__features__semantic_tokens__tests__snapshot_nuclear_family.snap
---
source: crates/kula-lsp/src/features/semantic_tokens.rs
expression: decoded
---
[
    Decoded {
        line: 4,
        character: 0,
        length: 4,
        kind: "keyword",
        text: "kula",
    },
    Decoded {
        line: 4,
        character: 5,
        length: 3,
        kind: "number",
        text: "0.1",
    },
    Decoded {
        line: 6,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 6,
        character: 7,
        length: 5,
        kind: "function",
        text: "alice",
    },
    Decoded {
        line: 6,
        character: 14,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 6,
        character: 19,
        length: 14,
        kind: "string",
        text: "\"Alice Sharma\"",
    },
    Decoded {
        line: 6,
        character: 35,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 6,
        character: 42,
        length: 6,
        kind: "enum",
        text: "female",
    },
    Decoded {
        line: 6,
        character: 50,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 6,
        character: 55,
        length: 10,
        kind: "number",
        text: "1950-04-12",
    },
    Decoded {
        line: 7,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 7,
        character: 7,
        length: 3,
        kind: "function",
        text: "bob",
    },
    Decoded {
        line: 7,
        character: 14,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 7,
        character: 19,
        length: 12,
        kind: "string",
        text: "\"Bob Sharma\"",
    },
    Decoded {
        line: 7,
        character: 35,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 7,
        character: 42,
        length: 4,
        kind: "enum",
        text: "male",
    },
    Decoded {
        line: 7,
        character: 50,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 7,
        character: 55,
        length: 10,
        kind: "number",
        text: "1948-11-30",
    },
    Decoded {
        line: 8,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 8,
        character: 7,
        length: 5,
        kind: "function",
        text: "carol",
    },
    Decoded {
        line: 8,
        character: 14,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 8,
        character: 19,
        length: 14,
        kind: "string",
        text: "\"Carol Sharma\"",
    },
    Decoded {
        line: 8,
        character: 35,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 8,
        character: 42,
        length: 6,
        kind: "enum",
        text: "female",
    },
    Decoded {
        line: 8,
        character: 50,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 8,
        character: 55,
        length: 10,
        kind: "number",
        text: "1975-09-03",
    },
    Decoded {
        line: 9,
        character: 2,
        length: 5,
        kind: "keyword",
        text: "birth",
    },
    Decoded {
        line: 9,
        character: 8,
        length: 11,
        kind: "parameter",
        text: "m_alice_bob",
    },
    Decoded {
        line: 11,
        character: 0,
        length: 8,
        kind: "keyword",
        text: "marriage",
    },
    Decoded {
        line: 11,
        character: 9,
        length: 11,
        kind: "function",
        text: "m_alice_bob",
    },
    Decoded {
        line: 11,
        character: 21,
        length: 5,
        kind: "parameter",
        text: "alice",
    },
    Decoded {
        line: 11,
        character: 27,
        length: 3,
        kind: "parameter",
        text: "bob",
    },
    Decoded {
        line: 11,
        character: 32,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 11,
        character: 38,
        length: 10,
        kind: "number",
        text: "1972-05-12",
    },
]
