crates/kula-lsp/src/features/snapshots/kula_lsp__features__semantic_tokens__tests__snapshot_polygamous_family.snap
---
source: crates/kula-lsp/src/features/semantic_tokens.rs
expression: decoded
---
[
    Decoded {
        line: 6,
        character: 0,
        length: 4,
        kind: "keyword",
        text: "kula",
    },
    Decoded {
        line: 6,
        character: 5,
        length: 3,
        kind: "number",
        text: "0.1",
    },
    Decoded {
        line: 8,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 8,
        character: 7,
        length: 5,
        kind: "class",
        text: "alice",
    },
    Decoded {
        line: 8,
        character: 15,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 8,
        character: 20,
        length: 14,
        kind: "string",
        text: "\"Alice Sharma\"",
    },
    Decoded {
        line: 8,
        character: 36,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 8,
        character: 43,
        length: 6,
        kind: "enumMember",
        text: "female",
    },
    Decoded {
        line: 8,
        character: 51,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 8,
        character: 56,
        length: 10,
        kind: "number",
        text: "1950-04-12",
    },
    Decoded {
        line: 9,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 9,
        character: 7,
        length: 6,
        kind: "class",
        text: "devraj",
    },
    Decoded {
        line: 9,
        character: 15,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 9,
        character: 20,
        length: 14,
        kind: "string",
        text: "\"Devraj Kumar\"",
    },
    Decoded {
        line: 9,
        character: 36,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 9,
        character: 43,
        length: 4,
        kind: "enumMember",
        text: "male",
    },
    Decoded {
        line: 9,
        character: 51,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 9,
        character: 56,
        length: 10,
        kind: "number",
        text: "1948-06-21",
    },
    Decoded {
        line: 10,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 10,
        character: 7,
        length: 5,
        kind: "class",
        text: "meera",
    },
    Decoded {
        line: 10,
        character: 15,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 10,
        character: 20,
        length: 7,
        kind: "string",
        text: "\"Meera\"",
    },
    Decoded {
        line: 10,
        character: 36,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 10,
        character: 43,
        length: 6,
        kind: "enumMember",
        text: "female",
    },
    Decoded {
        line: 10,
        character: 51,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 10,
        character: 56,
        length: 10,
        kind: "number",
        text: "1955-03-08",
    },
    Decoded {
        line: 12,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 12,
        character: 7,
        length: 5,
        kind: "class",
        text: "priya",
    },
    Decoded {
        line: 12,
        character: 14,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 12,
        character: 19,
        length: 13,
        kind: "string",
        text: "\"Priya Kumar\"",
    },
    Decoded {
        line: 12,
        character: 34,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 12,
        character: 41,
        length: 6,
        kind: "enumMember",
        text: "female",
    },
    Decoded {
        line: 12,
        character: 49,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 12,
        character: 54,
        length: 10,
        kind: "number",
        text: "1994-12-01",
    },
    Decoded {
        line: 13,
        character: 2,
        length: 5,
        kind: "keyword",
        text: "birth",
    },
    Decoded {
        line: 13,
        character: 8,
        length: 14,
        kind: "parameter",
        text: "m_alice_devraj",
    },
    Decoded {
        line: 15,
        character: 0,
        length: 8,
        kind: "keyword",
        text: "marriage",
    },
    Decoded {
        line: 15,
        character: 9,
        length: 14,
        kind: "function",
        text: "m_devraj_meera",
    },
    Decoded {
        line: 15,
        character: 24,
        length: 6,
        kind: "variable",
        text: "devraj",
    },
    Decoded {
        line: 15,
        character: 31,
        length: 5,
        kind: "variable",
        text: "meera",
    },
    Decoded {
        line: 15,
        character: 39,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 15,
        character: 45,
        length: 10,
        kind: "number",
        text: "1990-01-01",
    },
    Decoded {
        line: 16,
        character: 0,
        length: 8,
        kind: "keyword",
        text: "marriage",
    },
    Decoded {
        line: 16,
        character: 9,
        length: 14,
        kind: "function",
        text: "m_alice_devraj",
    },
    Decoded {
        line: 16,
        character: 24,
        length: 5,
        kind: "variable",
        text: "alice",
    },
    Decoded {
        line: 16,
        character: 31,
        length: 6,
        kind: "variable",
        text: "devraj",
    },
    Decoded {
        line: 16,
        character: 39,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 16,
        character: 45,
        length: 10,
        kind: "number",
        text: "1992-02-14",
    },
]
