crates/kula-lsp/src/features/snapshots/kula_lsp__features__semantic_tokens__tests__snapshot_single_couple.snap
---
source: crates/kula-lsp/src/features/semantic_tokens.rs
expression: decoded
---
[
    Decoded {
        line: 3,
        character: 0,
        length: 4,
        kind: "keyword",
        text: "kula",
    },
    Decoded {
        line: 3,
        character: 5,
        length: 3,
        kind: "number",
        text: "0.1",
    },
    Decoded {
        line: 5,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 5,
        character: 7,
        length: 5,
        kind: "class",
        text: "alice",
    },
    Decoded {
        line: 5,
        character: 14,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 5,
        character: 19,
        length: 14,
        kind: "string",
        text: "\"Alice Sharma\"",
    },
    Decoded {
        line: 5,
        character: 35,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 5,
        character: 42,
        length: 6,
        kind: "enumMember",
        text: "female",
    },
    Decoded {
        line: 5,
        character: 50,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 5,
        character: 55,
        length: 10,
        kind: "number",
        text: "1950-04-12",
    },
    Decoded {
        line: 6,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 6,
        character: 7,
        length: 3,
        kind: "class",
        text: "bob",
    },
    Decoded {
        line: 6,
        character: 14,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 6,
        character: 19,
        length: 12,
        kind: "string",
        text: "\"Bob Sharma\"",
    },
    Decoded {
        line: 6,
        character: 35,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 6,
        character: 42,
        length: 4,
        kind: "enumMember",
        text: "male",
    },
    Decoded {
        line: 6,
        character: 50,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 6,
        character: 55,
        length: 10,
        kind: "number",
        text: "1948-11-30",
    },
    Decoded {
        line: 8,
        character: 0,
        length: 8,
        kind: "keyword",
        text: "marriage",
    },
    Decoded {
        line: 8,
        character: 9,
        length: 11,
        kind: "function",
        text: "m_alice_bob",
    },
    Decoded {
        line: 8,
        character: 21,
        length: 5,
        kind: "variable",
        text: "alice",
    },
    Decoded {
        line: 8,
        character: 27,
        length: 3,
        kind: "variable",
        text: "bob",
    },
    Decoded {
        line: 8,
        character: 32,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 8,
        character: 38,
        length: 10,
        kind: "number",
        text: "1972-05-12",
    },
]
