crates/kula-lsp/src/features/snapshots/kula_lsp__features__semantic_tokens__tests__snapshot_three_generations.snap
---
source: crates/kula-lsp/src/features/semantic_tokens.rs
expression: decoded
---
[
    Decoded {
        line: 7,
        character: 0,
        length: 4,
        kind: "keyword",
        text: "kula",
    },
    Decoded {
        line: 7,
        character: 5,
        length: 3,
        kind: "number",
        text: "0.1",
    },
    Decoded {
        line: 10,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 10,
        character: 7,
        length: 6,
        kind: "class",
        text: "ramesh",
    },
    Decoded {
        line: 10,
        character: 15,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 10,
        character: 20,
        length: 15,
        kind: "string",
        text: "\"Ramesh Sharma\"",
    },
    Decoded {
        line: 10,
        character: 37,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 10,
        character: 44,
        length: 4,
        kind: "enumMember",
        text: "male",
    },
    Decoded {
        line: 10,
        character: 52,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 10,
        character: 57,
        length: 10,
        kind: "number",
        text: "1925-03-10",
    },
    Decoded {
        line: 10,
        character: 69,
        length: 4,
        kind: "property",
        text: "died",
    },
    Decoded {
        line: 10,
        character: 74,
        length: 10,
        kind: "number",
        text: "2005-08-22",
    },
    Decoded {
        line: 11,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 11,
        character: 7,
        length: 4,
        kind: "class",
        text: "sita",
    },
    Decoded {
        line: 11,
        character: 15,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 11,
        character: 20,
        length: 13,
        kind: "string",
        text: "\"Sita Sharma\"",
    },
    Decoded {
        line: 11,
        character: 37,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 11,
        character: 44,
        length: 6,
        kind: "enumMember",
        text: "female",
    },
    Decoded {
        line: 11,
        character: 52,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 11,
        character: 57,
        length: 10,
        kind: "number",
        text: "1928-07-15",
    },
    Decoded {
        line: 11,
        character: 69,
        length: 4,
        kind: "property",
        text: "died",
    },
    Decoded {
        line: 11,
        character: 74,
        length: 10,
        kind: "number",
        text: "2010-11-04",
    },
    Decoded {
        line: 13,
        character: 0,
        length: 8,
        kind: "keyword",
        text: "marriage",
    },
    Decoded {
        line: 13,
        character: 9,
        length: 13,
        kind: "function",
        text: "m_ramesh_sita",
    },
    Decoded {
        line: 13,
        character: 23,
        length: 6,
        kind: "variable",
        text: "ramesh",
    },
    Decoded {
        line: 13,
        character: 30,
        length: 4,
        kind: "variable",
        text: "sita",
    },
    Decoded {
        line: 13,
        character: 36,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 13,
        character: 42,
        length: 10,
        kind: "number",
        text: "1948-06-10",
    },
    Decoded {
        line: 16,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 16,
        character: 7,
        length: 5,
        kind: "class",
        text: "alice",
    },
    Decoded {
        line: 16,
        character: 14,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 16,
        character: 19,
        length: 14,
        kind: "string",
        text: "\"Alice Sharma\"",
    },
    Decoded {
        line: 16,
        character: 35,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 16,
        character: 42,
        length: 6,
        kind: "enumMember",
        text: "female",
    },
    Decoded {
        line: 16,
        character: 50,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 16,
        character: 55,
        length: 10,
        kind: "number",
        text: "1950-04-12",
    },
    Decoded {
        line: 17,
        character: 2,
        length: 5,
        kind: "keyword",
        text: "birth",
    },
    Decoded {
        line: 17,
        character: 8,
        length: 13,
        kind: "parameter",
        text: "m_ramesh_sita",
    },
    Decoded {
        line: 18,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 18,
        character: 7,
        length: 3,
        kind: "class",
        text: "bob",
    },
    Decoded {
        line: 18,
        character: 12,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 18,
        character: 17,
        length: 12,
        kind: "string",
        text: "\"Bob Sharma\"",
    },
    Decoded {
        line: 18,
        character: 31,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 18,
        character: 38,
        length: 4,
        kind: "enumMember",
        text: "male",
    },
    Decoded {
        line: 18,
        character: 44,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 18,
        character: 49,
        length: 10,
        kind: "number",
        text: "1948-11-30",
    },
    Decoded {
        line: 18,
        character: 61,
        length: 4,
        kind: "property",
        text: "died",
    },
    Decoded {
        line: 18,
        character: 66,
        length: 10,
        kind: "number",
        text: "2020-03-15",
    },
    Decoded {
        line: 20,
        character: 0,
        length: 8,
        kind: "keyword",
        text: "marriage",
    },
    Decoded {
        line: 20,
        character: 9,
        length: 11,
        kind: "function",
        text: "m_alice_bob",
    },
    Decoded {
        line: 20,
        character: 21,
        length: 5,
        kind: "variable",
        text: "alice",
    },
    Decoded {
        line: 20,
        character: 27,
        length: 3,
        kind: "variable",
        text: "bob",
    },
    Decoded {
        line: 20,
        character: 32,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 20,
        character: 38,
        length: 10,
        kind: "number",
        text: "1972-05-12",
    },
    Decoded {
        line: 20,
        character: 50,
        length: 3,
        kind: "property",
        text: "end",
    },
    Decoded {
        line: 20,
        character: 54,
        length: 10,
        kind: "number",
        text: "1990-08-01",
    },
    Decoded {
        line: 20,
        character: 66,
        length: 10,
        kind: "property",
        text: "end_reason",
    },
    Decoded {
        line: 20,
        character: 77,
        length: 7,
        kind: "enumMember",
        text: "divorce",
    },
    Decoded {
        line: 23,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 23,
        character: 7,
        length: 5,
        kind: "class",
        text: "carol",
    },
    Decoded {
        line: 23,
        character: 14,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 23,
        character: 19,
        length: 14,
        kind: "string",
        text: "\"Carol Sharma\"",
    },
    Decoded {
        line: 23,
        character: 35,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 23,
        character: 42,
        length: 6,
        kind: "enumMember",
        text: "female",
    },
    Decoded {
        line: 23,
        character: 50,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 23,
        character: 55,
        length: 10,
        kind: "number",
        text: "1975-09-03",
    },
    Decoded {
        line: 24,
        character: 2,
        length: 5,
        kind: "keyword",
        text: "birth",
    },
    Decoded {
        line: 24,
        character: 8,
        length: 11,
        kind: "parameter",
        text: "m_alice_bob",
    },
    Decoded {
        line: 26,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 26,
        character: 7,
        length: 4,
        kind: "class",
        text: "ravi",
    },
    Decoded {
        line: 26,
        character: 13,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 26,
        character: 18,
        length: 13,
        kind: "string",
        text: "\"Ravi Sharma\"",
    },
    Decoded {
        line: 26,
        character: 33,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 26,
        character: 40,
        length: 4,
        kind: "enumMember",
        text: "male",
    },
    Decoded {
        line: 26,
        character: 46,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 26,
        character: 51,
        length: 5,
        kind: "number",
        text: "~1980",
    },
    Decoded {
        line: 27,
        character: 2,
        length: 8,
        kind: "keyword",
        text: "adoption",
    },
    Decoded {
        line: 27,
        character: 11,
        length: 11,
        kind: "parameter",
        text: "m_alice_bob",
    },
    Decoded {
        line: 27,
        character: 24,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 27,
        character: 30,
        length: 10,
        kind: "number",
        text: "1985-06-01",
    },
]
